tests/negative/test_dot_bad_type.orb
fnc main () () {
    sym a:(i32 []);
    = (. a 0) 0;
};